# soomgo-agent

./: .gitignore  DEPLOY.md  DEPLOYMENT_NOTES.md  INSTALL.md  README.md  RELEASE.md  pyproject.toml  run_messages_skip.py  soomgo  soomgo-dev  test_colors.py  test_static_markup.py
docs/: ARCHITECTURE.md  CLI_AGENT_ANALYSIS.md  COLOR_PALETTE.md  DOCUMENTATION_INDEX.md  QUICK_REFERENCE.md  TOOL_REGISTRATION_GUIDE.md
export/2025-11-20_23-14-14_export/: README.md  models.py  requirements.txt
export/2025-11-20_23-14-14_export/analysis/: chat_list_export.csv  data_overview.json  data_summary.json  (+1 more)
scripts/: analyze_conversations.py  build-data.sh  build-release.sh  create_export.py  explore_conversations.py  inspect_login.py  install.ps1  install.sh
src/: __init__.py  config.py  utils.py
src/agent/: __init__.py  config.py  core.py
src/cli/: agent_repl.py  config_manager.py  daemon.py  dev_entry.py  main.py  scraper.py  shell.py  tui.py
src/knowledge/: __init__.py  retriever.py
src/scraper/: auth.py  central_db.py  chat_list_scraper.py  chat_message_scraper.py  data_quality.py  message_central_db.py
src/simulation/: __init__.py  grouper.py  models.py  runner.py  simulator.py  storage.py
src/training/: __init__.py  data_loader.py  formatter.py  models.py  optimizer.py  signature.py
tests/: test_auth.py  test_brief_responses.py  test_central_db.py  test_character_count_tool.py  test_chat_list.py  test_chat_messages.py  test_closure.py  test_context_pricing.py  test_goal_oriented.py  test_knowledge.py  test_real_conversation.py  test_user_scenario.py
